2.0 unreleased
==============

- Adjusted subtopics listing to use the is_expired method from the context
  view instead of the former Python script.
  [hannosch]

- Moved default views for non-folderish content types to browser pages.
  [hannosch]

- Moved default public pages for all our content types over from CMFPlone.
  [hannosch]

- Changed description label to summary for page and news item. This closes
  http://dev.plone.org/plone/ticket/8700.
  [hannosch]

- Adjusted functional tests to not rely on login portlet.
  [hannosch]

- Moved a manage_renameObject method from the autosort code into the ordered
  base class. It wasn't quite obvious, but the code was actually used.
  [hannosch]

- Removed icalendar package from the thirdparty folder. We don't use it
  ourselves and it's easy installable nowadays for anyone who wants it.
  [hannosch]

- Removed the unmaintained atcontentypes.conf support.
  [hannosch]

- Removed never fully implemented autosort and urlupload modules.
  [hannosch]

- Removed the weird Zope2 Interface to zope.interface bridging code.
  [hannosch]

- Removed annoying license statements from the source files. We have a central
  license.txt for that.
  [hannosch]

- Removed module aliases for content created before ATCT 1.0.
  [hannosch]

- Adjusted code to current Plone trunk after some deprecated code got removed.
  Moved old_folder_contents code into atct_topic_subtopics.
  [hannosch]

- Fixed some test failures concerning criterion editing.
  [hannosch]

- Adjusted reindex sanity tests to changed order of the indexing calls.
  [hannosch]

- Increase the version number to 2.0, to make it possible to release minor
  feature releases for the Plone 3.x line.
  [hannosch]

- Adjusted events test to new reality including zope.app.container and
  DCWorkflow events.
  [hannosch]

- Removed half-implemented and unmaintained archive and adapters code.
  [hannosch]

- Removed unmaintained and unused Favorite content type.
  [hannosch]
