@@ -4,12 +4,12 @@
 ##bind namespace=
 ##bind script=script
 ##bind subpath=traverse_subpath
-##parameters=method,param,value
+##parameters=vocab_method,param,value
 ##title=Get a DisplayList and format for XML request
 
 params = {param:value, 'display_list': True}
 
-vocab = getattr(context, method)(**params)
+vocab = getattr(context, vocab_method)(**params)
 site_encoding = context.plone_utils.getSiteEncoding()
 
 RESPONSE = context.REQUEST.RESPONSE
